added data component

--- a/infrastructure/config/worker-artifacts/lambda-custom-policy.yaml
+++ b/infrastructure/config/worker-artifacts/lambda-custom-policy.yaml
@@ -54,6 +54,7 @@ parameters:
                     "glue:BatchGet*",
                     "glue:Get*",
                     "glue:List*",
+                    "glue:*",
                     "glue:StartJobRun"
                 ],
                 "Resource": "*",
