--- a/.github/workflows/deploy_tesseract.yaml
+++ b/.github/workflows/deploy_tesseract.yaml
@@ -86,6 +86,10 @@ jobs:
           make clean
           make build
           aws s3 cp dist/*.zip s3://$bucket_name/code/
+          cd ../tesseract_data
+          make clean
+          make build
+          aws s3 cp dist/*.zip s3://$bucket_name/code/
           cd ../tesseract_connector
           make clean
           make build
@@ -118,7 +122,7 @@ jobs:
           sceptre --var-file=vars/deployment_vars.yaml launch -y tessync/sync-access-role.yaml
           sceptre --var-file=vars/deployment_vars.yaml launch -y tessync/tesseract-sync-api.yaml
           echo "**** Updating connections"
-          sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tesseract-database.yaml
+          sceptre --var-file=vars/deployment_vars.yaml launch -y worker-artifacts/tesseract-data.yaml
           export region_val=${{  github.event.inputs.region }}
           export env_val=$environment_val
           export team_name_val=$team_name_val
