fixed base config error

--- a/infrastructure/config/tesflow/tesflow-policy.yaml
+++ b/infrastructure/config/tesflow/tesflow-policy.yaml
@@ -53,7 +53,8 @@ parameters:
             {
                 "Action": [
                     "servicecatalog:*",
-                    "dynamodb:*"
+                    "dynamodb:*",
+                    "appsync:*"
                 ],
                 "Resource": "*",
                 "Effect": "Allow"
