--- a/infrastructure/config/worker-artifacts/lambda-custom-policy.yaml
+++ b/infrastructure/config/worker-artifacts/lambda-custom-policy.yaml
@@ -55,7 +55,8 @@ parameters:
                     "glue:Get*",
                     "glue:List*",
                     "glue:*",
-                    "glue:StartJobRun"
+                    "glue:StartJobRun",
+                    "appsync:*"
                 ],
                 "Resource": "*",
                 "Effect": "Allow"
