--- a/infrastructure/config/worker-artifacts/lambda-role.yaml
+++ b/infrastructure/config/worker-artifacts/lambda-role.yaml
@@ -3,6 +3,7 @@ parameters:
   StackName: "tes-lambda"
   AssumingServices:
     - lambda.amazonaws.com
+    - appsync.amazonaws.com
   MoreManagedPolicyArns:
     - "arn:aws:iam::aws:policy/AmazonS3FullAccess"
     - "arn:aws:iam::aws:policy/AmazonAthenaFullAccess"
